2019-12-17  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Fixing broken commit and cleaning up dead code.
	* constraint.cc (push_down_pack_expansion): Remove.
	(normalize_pack_expansion): Remove.
	(normalize_expression): Don't call normalize_pack_expansion.
	* parser.c (cp_lexer_get_preprocessor_token): Update diagnostics.
	* pt.c (finish_template_variable): Don't process concepts here.
	(instantiation_dependent_r): Use concept_check_p.

2019-12-17  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Cleaning up handling of different kinds of concepts.
	* constraint.cc (function_concept_check_p): Removed.
	(variable_concept_check_p): Likewise.
	(unpack_concept_check): New.
	(build_call_check): Moved and renamed to build_function_check.
	(build_variable_check): Moved.
	(normalize_concept_check): Use unpack_concept_check.
	(normalize_atom): Unify cases for different kinds of concepts.
	(build_concept_check_arguments): make static.
	(build_standard_check): Renamed from build_real_concept_check.
	(build_concept_check): Enumerate cases more precisely.
	(satisfy_check): Preparing to unpack concept check info.
	* cp-tree.h: (standard_concept_p): New.
	(variable_concept_p): Rewrite.
	(function_concept_p): Rewrite.
	(concept_definition_p): Match any kind of concept definition as the
	first operand of a template-id.
	(concept_check_p): Unwrap call expressions first.
	* parser.c: (cp_parser_template_id): Handle the different cases
	we can get from cp_parser_maybe_constrained_type_specifier.
	Build concept checks only when we need to.
	(cp_parser_maybe_constrained_type_specifier): Reject non-concepts
	more carefully. Return concept checks in the case of ambiguous
	deduction.
	(cp_parser_maybe_concept_name): Check for concepts more carefully.
	* pt.c (coerce_template_parms): Use concept_definition_p.
	(coerce_template_parms): Handle a deduction error where a potentially
	empty pack can be supplied after the last parameter of a concept.
	This probably affects alias templates too.